@@ -26,6 +26,8 @@
   used). (Felipe)
 - Fixed bug #52944 (Invalid write on second and subsequent reads with an
   inflate filter fed invalid data). (Gustavo)
+- Fixed bug #52941 (The 'iconv_mime_decode_headers' function is skipping
+  headers). (Adam)
 - Fixed bug #52931 (strripos not overloaded with function overloading enabled).
   (Felipe)
 - Fixed bug #52929 (Segfault in filter_var with FILTER_VALIDATE_EMAIL with
